@@ -48,6 +48,21 @@ Description: \n\r\
 This mob property makes them unable to enter the area. If the area has child areas \
 they will not be able to enter those either.  Even recalling into the area won't work.
 
+BOOKLOANING=\
+Property   : BookLoaning\n\r\
+Targets    : Items, Mobs, Areas, Rooms, Exits\n\r\
+Parameters : <XML> or (DUEDAYS=[NUM] MAXDAYS=[NUM] MAX=[NUM]\n\r\
+Parameters :           DAYCHARGE=[NUM]\n\r\
+Example    : DUEDAYS=12 MAXDAYS=24 MAX=2 DAYCHARGE=1\n\r\
+Description: \n\r\
+BookLoaning is primarily known as a common skill for allowing a player \
+to loan books to other players.  However, when used as a property/effect \
+on ungettable items, areas, rooms, or exits, it allows items to be borrowed \
+and lent just like a librarian.  Archons may add to the items to sell by \
+either dropping the item in the same room as the BookLoaning, or (in the case \
+of an area), throwing the item up into the air.  The parameters have meanings \
+identical to those listed in the Archon's Guide
+
 SLOW_LEARNER=SLOWLEARNER
 SLOWLEARNER=<ABILITY>\
 Property   : Slow Learner\n\r\
@@ -114,6 +129,20 @@ either dropping the item in the same room as the Merchant, or (in the case \
 of an area), throwing the item up into the air.  The parameters have meanings \
 identical to those listed in the Archon's Guide, except for budget, which is \
 the maximum amount to spend on any particular item purchased from a player.
+
+BOOKLOANING=\
+Property   : BookLoaning\n\r\
+Targets    : Items, Mobs, Areas, Rooms, Exits\n\r\
+Parameters : <XML> or (DUEDAYS=[NUM] MAXDAYS=[NUM] MAX=[NUM])\n\r\
+Example    : DUEDAYS=12 MAXDAYS=24 MAX=2\n\r\
+Description: \n\r\
+BookLoaning is primarily known as a common skill for allowing a player \
+to loan books to other players.  However, when used as a property/effect \
+on ungettable items, areas, rooms, or exits, it allows items to be borrowed \
+and lent just like a librarian.  Archons may add to the items to sell by \
+either dropping the item in the same room as the BookLoaning, or (in the case \
+of an area), throwing the item up into the air.  The parameters have meanings \
+identical to those listed in the Archon's Guide
 
 MOOD=\
 Property   : Mood\n\r\
