@@ -227,6 +227,25 @@ The writer uses this skill to edit an existing paper, or an existing \
 chapter in a book.  Once published, however, a book can not longer \
 be edited.
 
+BOOKLOAN=BOOKLOANING
+BOOKLOANING=<ABILITY>\
+Usage    : BOOKLOAN ([LIST/REMOVE]) [BOOK NAME] ([VALUE])\n\r\
+Example  : bookloan list\n\r\
+:        : bookloan ode to shoes 500\n\r\
+:        : bookloan all.book 500\n\r\
+:        : bookloan remove book\n\r\
+This skill allows a player to behave like a librarian, allowing other \
+players to LIST, BORROW, and DEPOSIT items which the player has made available. \n\r\
+\n\r\
+The player may add any book in their inventory to their library, and \
+set a value for the item.  Players may borrow books for a number of mud days \
+before they become due.  Once overdue, charges up to the value of the item \
+will accrue until a waiting limit is reached, at which point the item reappears. \
+on the shelf, and the borrower may not borrow again until charges are paid. \n\r\
+\n\r\
+The remove command may be used to take items of that name off the shelf, if it \
+is not already loaned out.
+
 BOOKNAME=BOOKNAMING
 BOOK_NAMING=BOOKNAMING
 BOOKNAMING=<ABILITY>\
