@@ -32,6 +32,7 @@
  31. CONFIG now has HELP, and also supports new player PRIVACY flag.
  32. New Command Line builder tool: TEMPLATE -- for saving your favorite kinds of things.
  33. New languages: PigLatin (for Archons), and Pirate (which the Pirate class now gets instead of thieves cant)
+ 34. New common skill/property: BookLoaning, similar to merchant, but for loaning instead of buying.
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
